Fix broken layout of subject search
The subject-search site included a separate TypoScript located in
fileadmin that is removed. This inserts its content into the main
template extension.

Resolves: FM-110

--- a/Resources/Private/Scss/Mixins/_styles.scss
+++ b/Resources/Private/Scss/Mixins/_styles.scss
@@ -1,7 +1,3 @@
-$form-margin: 0;
-$form-padding: .25em .8em;
-$form-border: 1px solid $button-background;
-
 @mixin table() {
 	td {
 		border-bottom: 1px solid $border-color;
@@ -34,6 +30,15 @@ $form-border: 1px solid $button-background;
 	text-shadow: none;
 	font-size: $font-size;
 	font-weight: normal;
+
+	&:hover {
+		border: 1px solid $background-color;
+	}
+
+	&:focus {
+		outline-offset: 0;
+		border: 0;
+	}
 }
 
 @mixin input-select() {
